# audio-processing-module

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
independent_aec/: CMakeLists.txt
independent_aec/src/: CMakeLists.txt  aec_common.h  aec_core.cpp  aec_core.h  aec_core_internal.h  aec_core_sse2.cpp  aec_logging.h  aec_logging_file_handling.h  aec_rdft.cpp  aec_rdft.h  aec_rdft_sse2.cpp  aec_resampler.cpp  aec_resampler.h  block_mean_calculator.cpp  block_mean_calculator.h  checks.hpp  cpu_features_wrapper.hpp  delay_estimator.cpp  delay_estimator.h  delay_estimator_internal.h  delay_estimator_wrapper.cpp  delay_estimator_wrapper.h  echo_cancellation.cpp  echo_cancellation.h  echo_cancellation_internal.h  randomization_functions.cpp  ring_buffer.cpp  signal_processing_library.hpp
independent_cng/: CMakeLists.txt
independent_cng/src/: CMakeLists.txt  auto_correlation.cpp  cpu_features_wrapper.hpp  cross_correlation.cpp  filter_ar.cpp  get_hanning_window.cpp  ilbc_specific_functions.cpp  levinson_durbin.cpp  min_max_operations.cpp  spl_sqrt.cpp  webrtc_cng.cpp  webrtc_cng.hpp
independent_ns/: CMakeLists.txt
independent_ns/src/: CMakeLists.txt  complex_bit_reverse.cpp  complex_fft.cpp  complex_fft_tables.h  copy_set_operations.cpp  downsample_fast.cpp  energy.cpp  get_scaling_square.cpp  noise_suppression.cpp  noise_suppression.hpp  noise_suppression_x.cpp  noise_suppression_x.hpp  ns_core.cpp  ns_core.hpp  nsx_core.cpp  nsx_core.hpp  nsx_core_c.cpp  real_fft.cpp  real_fft.hpp  spl_init.cpp  spl_sqrt_floor.cpp  vector_scaling_operations.cpp
independent_ns/tests/: CMakeLists.txt
independent_ns/tests/test_00/: test_00.cpp
independent_vad/: CMakeLists.txt  build-for-android-arm64-v8a.sh
independent_vad/src/: Android_JNI.cpp  CMakeLists.txt  checks.cpp  common.hpp  common_types.hpp  division_operations.cpp  fft4g.hpp  gmm.cpp  module_common_types.hpp  pitch_based_vad.cpp  pitch_based_vad.hpp  pitch_internal.cpp  pole_zero_filter.cpp  pole_zero_filter.hpp  resample.cpp  resample_48khz.cpp  resample_by_2.cpp  resample_by_2_internal.cpp  resample_by_2_internal.hpp  resample_fractional.cpp  resampler.cpp  resampler.hpp  spl_inl.hpp  standalone_vad.cpp  standalone_vad.hpp  vad.cpp  vad.hpp  vad_audio_proc.cpp  vad_audio_proc.hpp  vad_circular_buffer.cpp  vad_core.cpp  vad_core.hpp  vad_filterbank.cpp  vad_filterbank.hpp  vad_gmm.cpp  vad_gmm.hpp  vad_sp.cpp  vad_sp.hpp  voice_activity_detector.cpp  voice_activity_detector.hpp  (+2 more)
independent_vad/tests/: CMakeLists.txt
independent_vad/tests/test_00/: test_00.cpp
src/: CMakeLists.txt
src/webrtc/modules/audio_processing/: audio_processing_impl.h  debug.pb.h  noise_suppression_impl.cc  rms_level.cc
src/webrtc/modules/audio_processing/vad/: vad_audio_proc.cc  vad_audio_proc.h
src/webrtc/modules/include/: module_common_types.h
